release/1.8.3/VERSION.md
# 1.8.3

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.8.3```   |
| Release Time   | ```2015-02-20T14:00:09+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.8```   |
| sha1   | ```f6ad102bcaa53b1a58358f16e376d548d44933ec```   |
| size   | ```78494```   |
| total size  | ```114885064```  |
| url       | ```https://launchermeta.mojang.com/v1/packages/f6ad102bcaa53b1a58358f16e376d548d44933ec/1.8.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```69d14463ddc22e581bc66c66ef5eb72a8b452c46```   |
| size   | ```8460790```   |
| url       | ```https://launcher.mojang.com/v1/objects/69d14463ddc22e581bc66c66ef5eb72a8b452c46/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```163ba351cb86f6390450bb2a67fafeb92b6c0f2f```   |
| size   | ```9778206```   |
| url       | ```https://launcher.mojang.com/v1/objects/163ba351cb86f6390450bb2a67fafeb92b6c0f2f/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |